# OrdoGen

./: Cargo.toml  LICENSE
assets/: temporal_cycle.json
src/: main.rs  rubrics.rs
src/calendar/: calendar1939.rs  deserialize.rs  generate.rs  mod.rs
src/calendar/calendar1939/: christmastide.rs  mod.rs  sanctoral_cycle.rs  temporal_cycle.rs
src/calendar/calendar1962/: mod.rs  sanctoral_cycle.rs  temporal_cycle.rs
src/calendar/tests/: mod.rs
src/ordo/: mod.rs
src/rubrics/: display.rs  mod.rs  rubrics1910.rs  rubrics1939.rs  rubrics1962.rs
src/rubrics/tests/: mod.rs
