[package]
name = "ordo"
version = "0.1.0"
authors = ["Scott Morton <morton.scott.e@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"] }
itertools = "0.10"
time = "0.3"
liturgical = "0.2"
chrono = "0.4"
ron = "0.8"
log = "0.4.20"
env_logger = "0.10.1"
